--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "ext-mbstring": "*"
     },
     "require-dev": {
+        "phpstan/phpstan": "^1.5",
         "phpunit/phpunit": "^9.5.20",
         "rector/rector": "^0.12.20",
         "squizlabs/php_codesniffer": "~3.6.0"
